<resources>
    <string name="app_name">P_NavAdmin</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="public_use">Public Use</string>
    <string name="store_retailer">Store retailer</string>
    <string name="administrator">Administrator</string>
    <string name="sign_in">sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="End">End</string>
    <string name="start">Start</string>
    <string name="browse">Browse</string>
    <string name="image_name">Image Name</string>
    <string name="duration">Duration</string>
</resources>
